# silene

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TODO.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: support
android/app/src/main/java/dev/xyze/silene/: FileSelectActivity.kt  MainActivity.kt  SileneActivity.kt
android/app/src/main/res/layout/: select_layout.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
src/: android-application.cpp  android-application.hpp  android-coprocessor.cpp  android-coprocessor.hpp  android-environment.cpp  android-environment.hpp  android-main.cpp  android-window.cpp  android-window.h  application-state.cpp  application-state.h  audio-engine.cpp  audio-engine.h  base-window.h  base-window.hpp  elf-loader.cpp  elf-loader.h  elf.cpp  elf.h  environment.h  gdb-server.cpp  gdb-server.h  glfw-window.cpp  glfw-window.h  jni.cpp  jni.h  keybind-manager.hpp  libc-state.cpp  libc-state.h  main.cpp  paged-memory.cpp  paged-memory.hpp  sdl-main.cpp  sdl-window.cpp  sdl-window.h  syscall-handler.cpp  syscall-handler.hpp  syscall-translator.hpp  tcp-server.cpp  tcp-server.h  (+2 more)
src/gl/: gl-wrap.h
src/hook/: fileutils.h
src/jni/: base-robtop-activity.h  cocos-activity.h  cocos-bitmap.h  simple-crypto.h
src/kernel/: fcntl.cpp  kernel.h
src/libc/: ctype.h  cxa.h  errno.h  inet.h  locale.h  log.h  math.h  poll.h  pthread-mutex.cpp  pthread.cpp  pthread.h  semaphore.cpp  semaphore.h  setjmp.h  signal.h  socket.h  stdio.cpp  stdio.h  stdlib.h  string.h  time.h  unistd.h  wchar.h  wctype.h
support/: README
